--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -50,6 +50,7 @@
 
     <TextView
         android:id="@+id/label_register"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="14dp"
@@ -67,21 +68,122 @@
         android:id="@+id/sv_content_view"
         app:layout_constraintTop_toBottomOf="@+id/label_register"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="40dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <androidx.constraintlayout.widget.ConstraintLayout
             app:layout_constraintTop_toBottomOf="@+id/label_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:layout_marginTop="@dimen/margin_20"
             android:layout_marginHorizontal="@dimen/margin_14"
             android:background="@drawable/okbet_bg_login_card">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_account"
+                android:padding="24dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes
+                    android:id="@+id/et_account"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:hintText="@string/please_input_you_account"
+                    app:iconSignifier="@drawable/ic_login"
+                    app:isResponsiveIconColor="false"
+                    app:labelText="@string/member_account"
+                    app:labelTextStyle="normal"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:primaryColor="@color/color_AFAFB1">
+
+                    <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
+                        android:id="@+id/eet_account"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:imeOptions="actionNext"
+                        android:inputType="text"
+                        android:maxLines="1"
+                        android:textColor="@color/color_FFFFFF_DE000000"
+                        android:textSize="@dimen/textSize14sp" />
+
+                </org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes>
+
+                <LinearLayout
+                    android:id="@+id/block_valid_code"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/et_account">
+
+                    <org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes
+                        android:id="@+id/et_verification_code"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginTop="4dp"
+                        app:hintText="@string/hint_verification_code"
+                        app:iconSignifier="@drawable/ic_valid"
+                        app:isResponsiveIconColor="false"
+                        app:labelText="@string/verification_code"
+                        app:labelTextStyle="normal"
+                        app:primaryColor="@color/color_AFAFB1">
+
+                        <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
+                            android:id="@+id/eet_verification_code"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:imeOptions="actionNext"
+                            android:inputType="number"
+                            android:textColor="@color/color_FFFFFF_DE000000"
+                            android:singleLine="true"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            android:textSize="@dimen/textSize14sp" />
+
+                    </org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes>
+
+
+                    <LinearLayout
+                        android:id="@+id/llCheck"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="10dp"
+                        android:background="@color/transparent"
+                        android:gravity="center"
+                        android:minWidth="80dp"
+                        android:orientation="horizontal">
+
+                        <com.makeramen.roundedimageview.RoundedImageView
+                            android:id="@+id/ivVerification"
+                            android:layout_width="109dp"
+                            android:layout_height="40dp"
+                            android:minHeight="32dp"
+                            android:scaleType="fitXY"
+                            android:text="@string/get_verification_code"
+                            app:riv_corner_radius="8dp" />
+
+                        <ImageView
+                            android:id="@+id/ivReturn"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_marginStart="10dp"
+                            android:src="@drawable/ic_return" />
+
+                    </LinearLayout>
+                </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
             <androidx.constraintlayout.widget.ConstraintLayout
 
                 android:id="@+id/first_pager"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cl_account"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:padding="24dp">
 
@@ -191,7 +293,8 @@
                 android:padding="@dimen/margin_20"
                 app:layout_constraintTop_toBottomOf="@+id/first_pager"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                tools:visibility="gone">
                 <org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes
                     android:id="@+id/et_login_password"
                     android:layout_width="match_parent"
