--- a/app/src/main/res/drawable/selector_home_tab_slot.xml
+++ b/app/src/main/res/drawable/selector_home_tab_slot.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/icon_ok_game0" android:state_checked="true" />
-    <item android:drawable="@drawable/icon_ok_game0" android:state_selected="true" />
-    <item android:drawable="@drawable/icon_ok_game0" />
+    <item android:drawable="@drawable/ic_home_okgame_sel" android:state_checked="true" />
+    <item android:drawable="@drawable/ic_home_okgame_sel" android:state_selected="true" />
+    <item android:drawable="@drawable/ic_home_okgame_nor" />
 </selector>
