--- a/app/src/main/res/layout/fragment_home_elec.xml
+++ b/app/src/main/res/layout/fragment_home_elec.xml
@@ -87,6 +87,8 @@
                         android:background="@drawable/bg_white_radius_10"
                         android:fontFamily="@font/din_bold"
                         android:gravity="center"
+                        android:singleLine="true"
+                        android:ellipsize="end"
                         android:includeFontPadding="false"
                         android:paddingHorizontal="10dp"
                         android:layout_marginHorizontal="10dp"
@@ -140,7 +142,10 @@
                         android:layout_marginHorizontal="10dp"
                         android:layout_marginTop="5dp"
                         android:includeFontPadding="false"
+                        android:paddingHorizontal="10dp"
                         android:gravity="center"
+                        android:singleLine="true"
+                        android:ellipsize="end"
                         android:background="@drawable/bg_white_radius_10"
                         tools:text="P123.343"
                         android:textSize="13sp"
@@ -193,6 +198,8 @@
                         android:fontFamily="@font/din_bold"
                         android:gravity="center"
                         android:includeFontPadding="false"
+                        android:singleLine="true"
+                        android:ellipsize="end"
                         android:minWidth="60dp"
                         android:paddingHorizontal="10dp"
                         android:layout_marginHorizontal="10dp"
