--- a/app/src/main/res/layout/view_toolbar_detail_collaps.xml
+++ b/app/src/main/res/layout/view_toolbar_detail_collaps.xml
@@ -66,7 +66,7 @@
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="15dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center">
 
@@ -83,11 +83,13 @@
                     android:id="@+id/tv_toolbar_match_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
                     android:singleLine="true"
                     android:text="@string/time_null"
                     android:fontFamily="@font/din_regular"
                     android:textColor="@color/color_99FFFFFF"
-                    android:textSize="@dimen/textSize12sp" />
+                    android:textSize="@dimen/textSize12sp"
+                    tools:text="11:00" />
 
             </LinearLayout>
 
