--- a/app/src/main/res/layout/activity_detail_sport.xml
+++ b/app/src/main/res/layout/activity_detail_sport.xml
@@ -52,7 +52,7 @@
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/collaps_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/tool_bar_height"
+                android:layout_height="wrap_content"
                 app:contentInsetStart="0dp"
                 app:contentScrim="@color/transparent"
                 app:layout_collapseMode="pin"
