--- a/app/src/main/res/layout/item_tab_home.xml
+++ b/app/src/main/res/layout/item_tab_home.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="34dp"
-    android:gravity="center_vertical"
+    android:layout_height="38dp"
+    android:gravity="center"
     android:paddingLeft="10dp"
     android:paddingRight="12dp"
+    android:paddingBottom="4dp"
     android:layout_margin="@dimen/margin_5"
-    android:elevation="2dp"
     android:background="@drawable/selector_tab_home_tabitem">
 
     <ImageView
         android:id="@+id/iv_logo"
         android:layout_width="26dp"
         android:layout_height="26dp"
-        android:src="@drawable/selector_home_tab_recommend" />
+        android:src="@drawable/selector_home_tab_live" />
 
     <TextView
         android:id="@+id/tv_name"
