--- a/app/src/main/res/layout/view_toolbar_detail_collaps.xml
+++ b/app/src/main/res/layout/view_toolbar_detail_collaps.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/iv_toolbar_bg"
@@ -14,14 +14,24 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/tool_bar_height"
-        android:layout_gravity="bottom"
-        android:gravity="center_vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/iv_toolback"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+        <View
+            android:id="@+id/view_status_collaps"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/margin_25" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/tool_bar_height"
+            android:layout_gravity="bottom"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/iv_toolback"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
             android:padding="7dp"
             android:src="@drawable/ic_arrow_white"
             android:layout_marginLeft="10dp" />
@@ -66,15 +76,19 @@
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:orientation="vertical"
                 android:gravity="center">
 
                 <TextView
                     android:id="@+id/tv_toolbar_match_status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:lines="1"
                     android:singleLine="true"
+                    android:ellipsize="end"
                     android:textColor="@color/color_99FFFFFF"
                     android:textSize="@dimen/textSize12sp"
                     tools:text="下半场" />
@@ -84,7 +98,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:lines="1"
                     android:singleLine="true"
+                    android:ellipsize="end"
                     android:text="@string/time_null"
                     android:fontFamily="@font/din_regular"
                     android:textColor="@color/color_99FFFFFF"
@@ -122,6 +138,7 @@
                     android:textSize="@dimen/textSize16sp"
                     tools:text="義大利" />
             </LinearLayout>
+        </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
