--- a/app/src/main/res/layout/fragment_home_worldcup.xml
+++ b/app/src/main/res/layout/fragment_home_worldcup.xml
@@ -27,7 +27,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_tab_home"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/tool_bar_height"
         android:paddingHorizontal="@dimen/margin_15"
         android:clipToPadding="false"
