--- a/app/src/main/res/layout/fragment_home_elec.xml
+++ b/app/src/main/res/layout/fragment_home_elec.xml
@@ -298,7 +298,8 @@
             android:id="@+id/rv_tab_home"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_10"
+            android:clipToPadding="false"
+            android:paddingHorizontal="@dimen/margin_10"
             android:orientation="horizontal"
             tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:itemCount="6"
