--- a/app/src/main/res/layout/item_home_live.xml
+++ b/app/src/main/res/layout/item_home_live.xml
@@ -28,12 +28,10 @@
                 android:layout_height="match_parent"
                 android:src="@color/transparent_black_40" />
 
-            <ImageView
-                android:id="@+id/iv_cover"
+            <View
+                android:id="@+id/v_empty"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitXY"
-                android:visibility="gone" />
+                android:layout_height="match_parent" />
 
             <ImageView
                 android:id="@+id/iv_live_sound"
