--- a/app/src/main/res/layout/item_home_live.xml
+++ b/app/src/main/res/layout/item_home_live.xml
@@ -34,6 +34,13 @@
                 android:layout_height="match_parent" />
 
             <ImageView
+                android:id="@+id/iv_cover"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:visibility="gone" />
+
+            <ImageView
                 android:id="@+id/iv_live_sound"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
