--- a/app/src/main/res/layout/item_poker_game.xml
+++ b/app/src/main/res/layout/item_poker_game.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="192dp"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <androidx.cardview.widget.CardView
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:cardCornerRadius="@dimen/margin_8"
         android:elevation="0dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        tools:ignore="MissingConstraints">
+
         <ImageView
             android:id="@+id/iv_poker_bg"
             android:scaleType="fitXY"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:src="@drawable/ic_poker_item"/>
+            android:adjustViewBounds="true"
+            tools:src="@drawable/ic_poker_item" />
     </androidx.cardview.widget.CardView>
 
 
