--- a/app/src/main/res/layout/item_tab_home_cup.xml
+++ b/app/src/main/res/layout/item_tab_home_cup.xml
@@ -3,9 +3,9 @@
     android:layout_width="wrap_content"
     android:layout_height="38dp"
     android:gravity="center"
-    android:paddingRight="7dp"
+    android:paddingHorizontal="9dp"
     android:layout_gravity="center_vertical"
-    android:layout_marginRight="7.5dp"
+    android:layout_marginRight="8dp"
     android:background="@drawable/selector_tab_home_tabitem_cup">
 
     <ImageView
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="2dp"
-        android:textColor="@color/selector_white_gray"
+        android:textColor="@android:color/white"
         android:textSize="14sp"
         android:text="@string/sport" />
 </LinearLayout>
