--- a/app/src/main/res/layout/fragment_bet_list.xml
+++ b/app/src/main/res/layout/fragment_bet_list.xml
@@ -167,7 +167,7 @@
                         android:clipChildren="false"
                         android:clipToPadding="false"
                         android:visibility="gone"
-                        tools:visibility="gone">
+                        tools:visibility="visible">
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/rv_single_list"
@@ -181,9 +181,7 @@
                             tools:listitem="@layout/item_bet_list_batch_control_v3" />
                     </FrameLayout>
 
-                    <include
-                        android:id="@+id/includeOddsLayout"
-                        layout="@layout/include_bet_odds_tips" />
+
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/cl_total_info"
