--- a/app/src/main/res/layout/include_bet_odds_tips.xml
+++ b/app/src/main/res/layout/include_bet_odds_tips.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    tools:showIn="@layout/fragment_bet_list">
+    android:layout_height="50dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clOddsChanges"
@@ -15,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginHorizontal="14dp"
-            android:background="@color/color_e3e8ee"
+            android:background="@color/color_E3E8EE"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
