--- a/app/src/main/res/layout/activity_info_center.xml
+++ b/app/src/main/res/layout/activity_info_center.xml
@@ -15,11 +15,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
-        app:firstTabText="@string/inbox"
-        app:secondTabText="@string/unread_letters"/>
-
-
+        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"/>
 
     <com.scwang.smart.refresh.layout.SmartRefreshLayout
         android:layout_width="match_parent"
