--- a/app/src/main/res/layout/view_no_record.xml
+++ b/app/src/main/res/layout/view_no_record.xml
@@ -3,14 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
+    android:gravity="center"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/list_no_record_img"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_50"
         android:src="@drawable/icon_no_list_data_img"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
