--- a/app/src/main/res/layout/content_baseball_status.xml
+++ b/app/src/main/res/layout/content_baseball_status.xml
@@ -3,58 +3,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/league_odd_match_bb_status"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_marginRight="5dp"
+        android:textColor="@color/color_6C7BA8"
+        android:textSize="@dimen/textSize10sp"
+        android:visibility="gone"
+        tools:text="10"
+        tools:visibility="visible" />
 
-        <TextView
-            android:id="@+id/league_odd_match_bb_status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/color_6C7BA8"
-            android:textSize="@dimen/textSize10sp"
-            android:layout_marginRight="5dp"
-            android:visibility="gone"
-            tools:text="10"
-            tools:visibility="visible" />
+    <ImageView
+        android:id="@+id/league_odd_match_halfStatus"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_gravity="center"
+        android:layout_marginRight="5dp"
+        android:src="@drawable/ic_bb_first_half"
+        android:visibility="gone"
+        tools:ignore="ContentDescription"
+        tools:visibility="visible" />
 
-        <ImageView
-            android:id="@+id/league_odd_match_halfStatus"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="5dp"
-            android:src="@drawable/ic_bb_first_half"
-            android:visibility="gone"
-            tools:ignore="ContentDescription"
-            tools:visibility="visible" />
+    <ImageView
+        android:id="@+id/league_odd_match_basebag"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
+        android:layout_gravity="center"
+        android:layout_marginRight="5dp"
+        android:src="@drawable/ic_bb_base_bag_0_0_0"
+        android:visibility="gone"
+        tools:ignore="ContentDescription"
+        tools:visibility="visible" />
 
-        <ImageView
-            android:id="@+id/league_odd_match_basebag"
-            android:layout_width="12dp"
-            android:layout_height="12dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="5dp"
-            android:src="@drawable/ic_bb_base_bag_0_0_0"
-            android:visibility="gone"
-            tools:ignore="ContentDescription"
-            tools:visibility="visible" />
-
-        <TextView
-            android:id="@+id/txvOut"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:textColor="@color/color_6C7BA8"
-            android:textSize="@dimen/textSize12sp"
-            android:visibility="gone"
-            tools:text="@string/game_out"
-            tools:visibility="visible" />
-
-    </LinearLayout>
-
+    <TextView
+        android:id="@+id/txvOut"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="5dp"
+        android:textColor="@color/color_6C7BA8"
+        android:textSize="@dimen/textSize12sp"
+        android:visibility="gone"
+        tools:text="@string/game_out"
+        tools:visibility="visible" />
 
 </LinearLayout>
