--- a/app/src/main/res/layout/include_bet_odds_tips_single.xml
+++ b/app/src/main/res/layout/include_bet_odds_tips_single.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/tvMaxBetMoney"
             android:layout_marginStart="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -27,17 +28,17 @@
             android:background="@drawable/bg_bet_list_accept_odds"
             android:drawableEnd="@drawable/ic_arrow_down_blue"
             android:gravity="center"
-            android:paddingHorizontal="10dp"
+            android:paddingHorizontal="8dp"
             android:text="@string/accept_any_change_in_odds"
             android:textColor="@color/color_025BE8"
             android:textFontWeight="500"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/appCompatImageButton"
+            app:layout_constraintEnd_toStartOf="@+id/btnOddsChangeDes"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/appCompatImageButton"
+            android:id="@+id/btnOddsChangeDes"
             android:layout_width="40dp"
             android:layout_height="50dp"
             android:background="@null"
