--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="org.cxct.sportlottery.ui.game.betList.BetListRefactorAdapter"
+    tools:context="org.cxct.sportlottery.ui.game.betList.adapter.BetListRefactorAdapter"
     tools:ignore="RtlSymmetry,SpUsage,ContentDescription,HardcodedText,Autofill">
 
 
@@ -29,8 +29,7 @@
                 android:id="@+id/cl_item_background"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_square_shape_8dp_blue_stroke_white_solid"
-                app:layout_constraintTop_toTopOf="parent">
+                android:background="@drawable/bg_square_shape_8dp_blue_stroke_white_solid">
 
                 <View
                     android:id="@+id/topContainer"
@@ -227,6 +226,7 @@
                         android:background="@drawable/bg_radius_2_edittext_unfocus"
                         android:gravity="end|center_vertical"
                         android:inputType="numberDecimal"
+                        android:textColorHint="@color/color_455074_C9CFD7"
                         android:letterSpacing="0.05"
                         android:maxLength="14"
                         android:paddingHorizontal="10dp"
@@ -234,26 +234,11 @@
                         android:textSize="@dimen/textSize12sp"
                         android:textStyle="bold"
                         android:visibility="visible"
+                        android:hint="@string/hint_bet_limit_range"
                         app:layout_constraintBottom_toBottomOf="@id/et_bet"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/tv_win"
                         app:layout_constraintTop_toTopOf="@+id/et_bet" />
-
-                    <TextView
-                        android:id="@+id/tv_win_hint_default"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:gravity="end"
-                        android:paddingHorizontal="10dp"
-                        android:textColor="@color/color_455074_C9CFD7"
-                        android:textSize="@dimen/textSize12sp"
-                        android:visibility="visible"
-                        app:layout_constraintBottom_toBottomOf="@+id/et_win"
-                        app:layout_constraintEnd_toEndOf="@+id/et_win"
-                        app:layout_constraintStart_toStartOf="@+id/et_win"
-                        app:layout_constraintTop_toTopOf="@+id/et_win"
-                        tools:text="@string/hint_bet_limit_range" />
-
 
                     <TextView
                         android:id="@+id/tv_bet"
@@ -271,6 +256,8 @@
                     <EditText
                         android:id="@+id/et_bet"
                         android:layout_width="0dp"
+                        android:hint="@string/hint_bet_limit_range"
+                        android:textColorHint="@color/color_455074_C9CFD7"
                         android:layout_height="@dimen/et_bet_height"
                         android:layout_marginHorizontal="5dp"
                         android:layout_marginStart="5dp"
@@ -288,21 +275,6 @@
                         app:layout_constraintEnd_toEndOf="@id/guideline_input"
                         app:layout_constraintStart_toEndOf="@+id/tv_bet"
                         app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/tv_hint_default"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:gravity="end"
-                        android:paddingHorizontal="10dp"
-                        android:textColor="@color/color_455074_C9CFD7"
-                        android:textSize="@dimen/textSize12sp"
-                        android:visibility="visible"
-                        app:layout_constraintBottom_toBottomOf="@+id/et_bet"
-                        app:layout_constraintEnd_toEndOf="@+id/et_bet"
-                        app:layout_constraintStart_toStartOf="@+id/et_bet"
-                        app:layout_constraintTop_toTopOf="@+id/et_bet"
-                        tools:text="@string/hint_bet_limit_range" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <!--region 提示文字 -->
