--- a/app/src/main/res/layout/item_sport_odd.xml
+++ b/app/src/main/res/layout/item_sport_odd.xml
@@ -161,7 +161,7 @@
 
                         <TextView
                             android:id="@+id/league_odd_match_name_home"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
                             android:layout_marginRight="5dp"
@@ -303,7 +303,7 @@
 
                         <TextView
                             android:id="@+id/league_odd_match_name_away"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
                             android:layout_marginRight="5dp"
